# AE4ASM599-ros-gazebo

./: .gitignore  .gitmodules  README.md
.devcontainer/: Dockerfile  devcontainer.json
gazebo_files/models/test_car/: model.config  model.sdf
gazebo_files/worlds/: building_robot.sdf  pathfollowing.sdf  pathfollowing2.sdf  tugbot_depot.sdf  world_demo.sdf
rviz_configs/: reconstruction_config.rviz
src/environment_reconstruction/: README.md  launch_3d_reconstruction.launch.py  package.xml  setup.cfg  setup.py
src/environment_reconstruction/environment_reconstruction/: cluster_client.py  clustering.py  filter_pcl.py  keyboard_capture.py  occupancy_map.py  pointcloud_aggregation.py  positioning.py  stereo_reconstruction.py  test.py  utils.py
src/gz_tf_broadcaster/: package.xml  setup.cfg  setup.py
src/gz_tf_broadcaster/gz_tf_broadcaster/: tf_broadcaster.py  tf_to_odom.py
src/image2map/: README.md  image2map.launch.py  package.xml  setup.cfg  setup.py
src/image2map/image2map/: filter_pcl.py  grid_map.py  keyboard_capture.py  positioning.py  stereo_reconstruction.py  timer.py  utils.py
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/srv/: Cluster.srv  CreateOccupancyMap.srv  PointcloudTransform.srv  Reconstruct.srv  ReconstructImage.srv
src/lidar2map/: README.md  package.xml  setup.cfg  setup.py
src/lidar2map/launch/: lidar2map.launch.py
src/my_bot/: CMakeLists.txt  README.md
src/navigate/: README.md  package.xml  setup.cfg  setup.py
src/navigate_msgs/: CMakeLists.txt  package.xml
src/pathfollowing/: README.md  launch_pathfinding.launch.py  package.xml  setup.cfg  setup.py
src/pathfollowing/pathfollowing/: find_path.py  sub_lidar.py
src/pointcloud_to_occupancy_grid/: README.md  package.xml  setup.cfg  setup.py
src/robot_sdf/: CMakeLists.txt  README.md  package.xml
src/simulation/: CMakeLists.txt  README.md  package.xml
(+34 files in other folders)
