<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>environment_reconstruction</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="luka-groot@hotmail.nl">ros</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <build_depend>glob</build_depend>
  <exec_depend>interfaces</exec_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>cv2</exec_depend>
  <exec_depend>matplotlib</exec_depend>
  <exec_depend>ros2_numpy</exec_depend>
  <exec_depend>open3d</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
