<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pathfollowing</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="luka-groot@hotmail.nl">ros</maintainer>
  <license>Apache-2.0</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>numpy</depend>
  <depend>ament_copyright</depend>
  <depend>ament_flake8</depend>
  <depend>ament_pep257</depend>
  <depend>python3-pytest</depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
